FMZ-59 Removed redundant `VideoPlaybackSpeedView` and related code. Replaced `MediaPlayer` volume management with `VideoPlayer` for consistency. Simplified `PlayerConstants` and updated dependent views and controllers accordingly.